--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGO_URI = "mongodb+srv://eduardotruvar:Grandeedu.1@atlascluster.h2rffzi.mongodb.net/?retryWrites=true&w=majority&appName=AtlasCluster"
 PORT = 8080
+CLIENT_ID = "983213055827-h9mqg3tp1t6qpj107e9ufb01hee9gekn.apps.googleusercontent.com"
